--- a/CaronaSocial/CaronaSocial/Storyboards/Route.storyboard
+++ b/CaronaSocial/CaronaSocial/Storyboards/Route.storyboard
@@ -53,37 +53,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="114"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uxt-Z0-EtY">
-                                                    <rect key="frame" x="20" y="53" width="374" height="34"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
-                                                </textField>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Horário de saída" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tuL-4S-mnt">
-                                                    <rect key="frame" x="20" y="16" width="374" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="uxt-Z0-EtY" firstAttribute="leading" secondItem="N6H-Yi-40K" secondAttribute="leading" constant="20" id="7Vf-pE-sAg"/>
-                                                <constraint firstItem="tuL-4S-mnt" firstAttribute="top" secondItem="N6H-Yi-40K" secondAttribute="top" constant="16" id="B6C-Vk-RGh"/>
-                                                <constraint firstItem="uxt-Z0-EtY" firstAttribute="top" secondItem="tuL-4S-mnt" secondAttribute="bottom" constant="16" id="JTt-SJ-VkV"/>
-                                                <constraint firstItem="tuL-4S-mnt" firstAttribute="leading" secondItem="N6H-Yi-40K" secondAttribute="leading" constant="20" id="PkJ-uM-b5V"/>
-                                                <constraint firstAttribute="trailing" secondItem="tuL-4S-mnt" secondAttribute="trailing" constant="20" id="pzl-st-xWv"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="uxt-Z0-EtY" secondAttribute="bottom" constant="16" id="qDV-A3-of8"/>
-                                                <constraint firstAttribute="trailing" secondItem="uxt-Z0-EtY" secondAttribute="trailing" constant="20" id="wc6-2X-CGM"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="destinyCell" rowHeight="114" id="Rv6-Z3-j3h">
-                                        <rect key="frame" x="0.0" y="251" width="414" height="114"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Rv6-Z3-j3h" id="a3m-95-P6a">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="114"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Destino" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1bQ-eV-LgV">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Destino" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tuL-4S-mnt">
                                                     <rect key="frame" x="20" y="16" width="374" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -96,14 +66,61 @@
                                                 </textField>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="0xp-Sx-fVx" firstAttribute="leading" secondItem="N6H-Yi-40K" secondAttribute="leadingMargin" id="8DP-qg-V7R"/>
+                                                <constraint firstItem="tuL-4S-mnt" firstAttribute="top" secondItem="N6H-Yi-40K" secondAttribute="top" constant="16" id="B6C-Vk-RGh"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="0xp-Sx-fVx" secondAttribute="bottom" constant="16" id="Kgo-kG-ujb"/>
+                                                <constraint firstItem="tuL-4S-mnt" firstAttribute="leading" secondItem="N6H-Yi-40K" secondAttribute="leading" constant="20" id="PkJ-uM-b5V"/>
+                                                <constraint firstItem="0xp-Sx-fVx" firstAttribute="trailing" secondItem="N6H-Yi-40K" secondAttribute="trailingMargin" id="WfY-Bx-Vgk"/>
+                                                <constraint firstAttribute="trailing" secondItem="tuL-4S-mnt" secondAttribute="trailing" constant="20" id="pzl-st-xWv"/>
+                                                <constraint firstItem="0xp-Sx-fVx" firstAttribute="top" secondItem="tuL-4S-mnt" secondAttribute="bottom" constant="16" id="s7V-h1-Dwn"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="destinyCell" rowHeight="114" id="Rv6-Z3-j3h">
+                                        <rect key="frame" x="0.0" y="251" width="414" height="114"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Rv6-Z3-j3h" id="a3m-95-P6a">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="114"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intervalo de saída" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1bQ-eV-LgV">
+                                                    <rect key="frame" x="20" y="16" width="374" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uxt-Z0-EtY">
+                                                    <rect key="frame" x="20" y="53" width="162" height="34"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aA7-PE-x3b">
+                                                    <rect key="frame" x="232" y="53" width="162" height="34"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="as" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bbX-Jg-QhU">
+                                                    <rect key="frame" x="198" y="59.5" width="18" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="uxt-Z0-EtY" firstAttribute="top" secondItem="1bQ-eV-LgV" secondAttribute="bottom" constant="16" id="2gi-jW-4Ms"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="uxt-Z0-EtY" secondAttribute="bottom" constant="16" id="6HT-ZG-pJH"/>
                                                 <constraint firstItem="1bQ-eV-LgV" firstAttribute="top" secondItem="a3m-95-P6a" secondAttribute="top" constant="16" id="6ca-43-Wn5"/>
+                                                <constraint firstItem="uxt-Z0-EtY" firstAttribute="leading" secondItem="a3m-95-P6a" secondAttribute="leading" constant="20" id="9Oa-bt-nT1"/>
                                                 <constraint firstItem="1bQ-eV-LgV" firstAttribute="leading" secondItem="a3m-95-P6a" secondAttribute="leading" constant="20" id="EXK-rE-vkd"/>
-                                                <constraint firstItem="0xp-Sx-fVx" firstAttribute="leading" secondItem="a3m-95-P6a" secondAttribute="leading" constant="20" id="FIE-7d-IGm"/>
-                                                <constraint firstAttribute="trailing" secondItem="0xp-Sx-fVx" secondAttribute="trailing" constant="20" id="Fri-ms-hOc"/>
+                                                <constraint firstItem="bbX-Jg-QhU" firstAttribute="leading" secondItem="uxt-Z0-EtY" secondAttribute="trailing" constant="16" id="G6I-M5-wnz"/>
                                                 <constraint firstItem="1bQ-eV-LgV" firstAttribute="top" secondItem="a3m-95-P6a" secondAttribute="top" constant="16" id="M3l-IC-05O"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="0xp-Sx-fVx" secondAttribute="bottom" constant="16" id="cvP-oy-9Ib"/>
-                                                <constraint firstItem="0xp-Sx-fVx" firstAttribute="top" secondItem="1bQ-eV-LgV" secondAttribute="bottom" constant="16" id="jng-Or-0bz"/>
+                                                <constraint firstItem="bbX-Jg-QhU" firstAttribute="centerX" secondItem="a3m-95-P6a" secondAttribute="centerX" id="Oa2-cz-39Z"/>
+                                                <constraint firstItem="aA7-PE-x3b" firstAttribute="top" secondItem="uxt-Z0-EtY" secondAttribute="top" id="cff-ti-4PT"/>
+                                                <constraint firstItem="aA7-PE-x3b" firstAttribute="leading" secondItem="bbX-Jg-QhU" secondAttribute="trailing" constant="16" id="kIh-bB-ht8"/>
+                                                <constraint firstAttribute="trailing" secondItem="aA7-PE-x3b" secondAttribute="trailing" constant="20" id="vwy-in-Ha6"/>
                                                 <constraint firstAttribute="trailing" secondItem="1bQ-eV-LgV" secondAttribute="trailing" constant="20" id="w7W-fs-MTQ"/>
+                                                <constraint firstItem="bbX-Jg-QhU" firstAttribute="centerY" secondItem="uxt-Z0-EtY" secondAttribute="centerY" id="z0T-IB-P4t"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="aA7-PE-x3b" secondAttribute="bottom" constant="16" id="zbe-f7-OTN"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -120,20 +137,11 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aA7-PE-x3b">
-                                                    <rect key="frame" x="20" y="53" width="374" height="34"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits"/>
-                                                </textField>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="pZH-7Y-J1L" firstAttribute="leading" secondItem="dqi-6o-XVf" secondAttribute="leading" constant="20" id="5KR-bF-ukS"/>
                                                 <constraint firstAttribute="trailing" secondItem="pZH-7Y-J1L" secondAttribute="trailing" constant="20" id="Anm-sa-Fg9"/>
-                                                <constraint firstAttribute="trailing" secondItem="aA7-PE-x3b" secondAttribute="trailing" constant="20" id="PVb-m9-sLM"/>
                                                 <constraint firstItem="pZH-7Y-J1L" firstAttribute="top" secondItem="dqi-6o-XVf" secondAttribute="top" constant="16" id="T5K-c7-QBD"/>
-                                                <constraint firstItem="aA7-PE-x3b" firstAttribute="top" secondItem="pZH-7Y-J1L" secondAttribute="bottom" constant="16" id="aP4-S7-V6e"/>
-                                                <constraint firstItem="aA7-PE-x3b" firstAttribute="leading" secondItem="dqi-6o-XVf" secondAttribute="leading" constant="20" id="eGm-eR-hxL"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="aA7-PE-x3b" secondAttribute="bottom" constant="16" id="y9d-qN-6ms"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -176,14 +184,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AdressTableViewCell" id="feu-oG-vS9" customClass="AddressTableViewCell" customModule="Carona_Social" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="feu-oG-vS9" id="9Pw-pk-ojR">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mr1-Hk-h1r">
-                                            <rect key="frame" x="20" y="11" width="354" height="21.5"/>
+                                            <rect key="frame" x="20" y="11" width="354" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
