--- a/CaronaSocial/CaronaSocial/Storyboards/Register.storyboard
+++ b/CaronaSocial/CaronaSocial/Storyboards/Register.storyboard
@@ -1186,7 +1186,7 @@
         <image name="progress3" width="375" height="11"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Fdo-GP-Aj1"/>
+        <segue reference="Dek-Ul-rKx"/>
         <segue reference="BMf-mN-OXj"/>
     </inferredMetricsTieBreakers>
 </document>
