--- a/CaronaSocial/CaronaSocial/Storyboards/Match.storyboard
+++ b/CaronaSocial/CaronaSocial/Storyboards/Match.storyboard
@@ -14,7 +14,8 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="V8U-XI-cSq">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="0.95999999999999996" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="sectionIndexBackgroundColor" white="0.95999999999999996" alpha="0.84705882352941175" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="roteCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="roteCell" rowHeight="175" id="jsq-at-2n8" customClass="RoteTableViewCell" customModule="Carona_Social" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="175"/>
@@ -71,7 +72,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="chegada" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BPU-W9-fDr">
-                                            <rect key="frame" x="66" y="129" width="67" height="21"/>
+                                            <rect key="frame" x="67" y="129" width="67" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -88,7 +89,7 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Grupo 628" translatesAutoresizingMaskIntoConstraints="NO" id="bcc-8p-FG2">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="start" translatesAutoresizingMaskIntoConstraints="NO" id="bcc-8p-FG2">
                                             <rect key="frame" x="36" y="70" width="18" height="17"/>
                                             <color key="tintColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
@@ -97,7 +98,7 @@
                                             </constraints>
                                         </imageView>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="bjL-Mh-ynd">
-                                            <rect key="frame" x="37" y="130.5" width="13" height="18"/>
+                                            <rect key="frame" x="37" y="130.5" width="14" height="18"/>
                                             <color key="tintColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </imageView>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Grupo 629" translatesAutoresizingMaskIntoConstraints="NO" id="M8K-bA-gTI">
@@ -136,6 +137,7 @@
                                         <constraint firstAttribute="bottomMargin" secondItem="M8K-bA-gTI" secondAttribute="bottom" constant="50" id="zcT-9c-xcy"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" white="0.95999999999999996" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="arrivalTime" destination="06O-yU-PFk" id="TUs-su-seV"/>
                                     <outlet property="departureTime" destination="FV9-HK-yeo" id="PPR-Am-czm"/>
@@ -164,6 +166,7 @@
                                         <constraint firstItem="59a-0t-b7j" firstAttribute="leading" secondItem="pi8-0r-YAC" secondAttribute="leading" constant="28" id="new-jr-bdO"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" white="0.95999999999999996" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="rideNumber" destination="59a-0t-b7j" id="5Kh-gj-uAb"/>
                                 </connections>
@@ -240,6 +243,7 @@
                                         </view>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" white="0.95999999999999996" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="distance" destination="RvT-kE-cgX" id="wql-wy-pqR"/>
                                     <outlet property="driver" destination="Mkh-fR-FCq" id="XYg-7Q-jgt"/>
@@ -395,17 +399,17 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="jQm-pa-Ic6">
-                                                <rect key="frame" x="0.0" y="36.5" width="95.5" height="87"/>
+                                                <rect key="frame" x="0.0" y="36.5" width="96.5" height="87"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="xbN-DT-OnH">
-                                                        <rect key="frame" x="0.0" y="0.0" width="74.5" height="20.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="76.5" height="20.5"/>
                                                         <subviews>
-                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Grupo 628" translatesAutoresizingMaskIntoConstraints="NO" id="G0C-xJ-naj">
-                                                                <rect key="frame" x="0.0" y="0.0" width="18" height="20.5"/>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="start" translatesAutoresizingMaskIntoConstraints="NO" id="G0C-xJ-naj">
+                                                                <rect key="frame" x="0.0" y="0.0" width="20" height="20.5"/>
                                                                 <color key="tintColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             </imageView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="saida" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="noy-ag-DEZ">
-                                                                <rect key="frame" x="34" y="0.0" width="40.5" height="20.5"/>
+                                                                <rect key="frame" x="36" y="0.0" width="40.5" height="20.5"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -413,20 +417,20 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="5J2-Qb-HaH">
-                                                        <rect key="frame" x="0.0" y="36.5" width="95.5" height="50.5"/>
+                                                        <rect key="frame" x="0.0" y="36.5" width="96.5" height="50.5"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Grupo 629" translatesAutoresizingMaskIntoConstraints="NO" id="1lI-Ka-c30">
-                                                                <rect key="frame" x="0.0" y="0.0" width="13" height="14"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="14" height="14"/>
                                                             </imageView>
                                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="hT3-QZ-psu">
-                                                                <rect key="frame" x="0.0" y="30" width="95.5" height="20.5"/>
+                                                                <rect key="frame" x="0.0" y="30" width="96.5" height="20.5"/>
                                                                 <subviews>
                                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="hhx-OE-Uug">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="13" height="20.5"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="14" height="20.5"/>
                                                                         <color key="tintColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     </imageView>
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="chegada" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H50-0g-olg">
-                                                                        <rect key="frame" x="29" y="0.0" width="66.5" height="20.5"/>
+                                                                        <rect key="frame" x="30" y="0.0" width="66.5" height="20.5"/>
                                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                         <nil key="textColor"/>
                                                                         <nil key="highlightedColor"/>
@@ -536,11 +540,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Grupo 628" width="18" height="18"/>
         <image name="Grupo 629" width="2" height="14"/>
         <image name="Media - Circle" width="45" height="45"/>
         <image name="cadeirante" width="17" height="20"/>
-        <image name="placeholder" width="13" height="18"/>
+        <image name="placeholder" width="14" height="20"/>
+        <image name="start" width="20" height="20"/>
         <image name="vagas" width="16" height="23"/>
     </resources>
 </document>
